Pequenas Alterações na parte da foto e informações sobre mim, além da criação de texto animado

--- a/index.html
+++ b/index.html
@@ -23,17 +23,20 @@
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">CURRÍCULO</a>
+              <a class="navbar-brand" href="index.html">CURRÍCULO</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Sobre</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Currículo</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Contato</a>
@@ -46,20 +49,26 @@
     </header>
 
     <main>
-        <div class=" sobre">
-            <div class="foto">
-                <div class="background">
-                    <div>
-                        <img src="testefoto.jfif" width="250" alt="">
-                    </div>
-                    <div class="text-dark text-center mt-3">Ruy Machado</div>
-                </div>
+      <div class=" sobre">
+        <div class="fotoperfil">
+          <div>
+            <img src="testefoto.jfif" width="250" alt="">
+            <div class="text-dark text-center mt-3">
+              Ruy Machado
             </div>
-            <div class="texto">TEXTO</div>
+          </div>
         </div>
-        <div></div>
-        <div></div>
-        <div></div>
+
+        <div class="info">
+          <div class="h3">
+            Sobre Mim...
+          </div>
+          <div class="txt-animado">
+            <span></span>  
+          </div>
+        </div>
+      </div>
+  
     </main>
 
 
