--- a/index.html
+++ b/index.html
@@ -21,29 +21,23 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg fixed-top bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html">CURRÍCULO</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Sobre</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Currículo</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Contato</a>
-                  </li>
-                  
-                </ul>
-              </div>
+              <ul class="navbar-nav">
+                <li>
+                  <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="#">Sobre</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="#">Currículo</a>
+                </li>
+                <li>
+                  <a class="nav-link" href="#">Contato</a>
+                </li>
+              </ul>
             </div>
           </nav>
     </header>
