Criação skill bar

--- a/index.html
+++ b/index.html
@@ -54,11 +54,40 @@
         </div>
 
         <div class="info">
-          <div class="h3">
+          <div class="h3 mb-4">
             Sobre Mim...
           </div>
-          <div class="txt-animado">
-            <span></span>  
+          <div class="txt-animado mt-4">
+            <span></span>
+            <div class="skill mt-5">
+              <div class="mt-3 mb-4">
+                Atualmente estudo programação front-end com foco em:
+              </div>
+              <li>
+                <h5>HTML</h5>
+                <div class="bar">
+                  <div class="html"></div>
+                </div>
+              </li>
+              <li>
+                <h5>CSS</h5>
+                <div class="bar">
+                  <div class="css"></div>
+                </div>
+              </li>
+              <li>
+                <h5>JavaScript</h5>
+                <div class="bar">
+                  <div class="js"></div>
+                </div>
+              </li>
+              <li>
+                <h5>VUE</h5>
+                <div class="bar">
+                  <div class="vue"></div>
+                </div>
+              </li>
+            </div> 
           </div>
         </div>
       </div>
