Criação estilo gradiente de cor para divisão

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="h3 mb-4">
             Olá, me chamo Ruy...
           </div>
-          <div class="txt-animado mt-4">
+          <div class="txt-animado">
             <span></span>
             <div class="skill mt-5">
               <div class="mt-3 mb-4 h2">
