Criação parte contato

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           <div>
             <img src="testefoto.jfif" width="250" alt="">
             <div class="text-dark text-center mt-3">
-              Ruy Machado<br>
+              Ruy Luiz da Silva Machado Neto<br>
               23 anos<br>
-              Vitória, ES
+              Vitória, ES - Brasil
             </div>
           </div>
         </div>
@@ -117,7 +117,7 @@
               <li>
                 <h5>Relevium - Centro de Controle da Dor | @releviumccd</h5>
                 Estágiario TI<br>
-                setembro 2022 - novembro 2022<br><br><br>
+                agosto 2022 - novembro 2022<br><br><br>
               </li>
               <li>
                 <h5>Ditos Lanches LTDA | @ditoslanches</h5>
@@ -129,12 +129,46 @@
         </div>
       </div>
 
+      <div class="contato">
+        <span class="d-flex  justify-content-center">
+          Contato
+        </span>
+        <div class="d-flex justify-content-around mt-5">
+          <div class="iconfyicon">
+            <a href="https://github.com/RuyMachado">
+              <iconify-icon icon="mdi:github" style="color: black;" width="50px"></iconify-icon><br>
+              github.com/RuyMachado2
+            </a>
+          </div>
+          <div class="iconfyicon">
+            <a href="#">
+              <iconify-icon icon="mdi:linkedin" style="color: black;" width="50px"></iconify-icon><br>
+              CRIAR AINDA
+            </a> 
+          </div>
+          <div class="iconfyicon">
+            <a href="https://www.instagram.com/ruymachado2/">
+              <iconify-icon icon="mdi:instagram" style="color: black;" width="50px"></iconify-icon><br>
+              @ruymachado2
+            </a>
+          </div>
+          <div class="iconfyicon">
+            <iconify-icon icon="ic:outline-email" style="color: black;" width="50px"></iconify-icon><br>
+            ruynetomachado@gmail.com
+        </div> 
+      </div>
+
 
     </main>
 
 
     <!--JS bootstrap-->
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     
+    <!--JS iconfy-->
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.7/iconify-icon.min.js"></script>
 </body>
 </html>
