Troca foto Perfil

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <div class=" home">
         <div class="fotoperfil">
           <div>
-            <img src="testefoto.jfif" width="250" alt="">
+            <img src="perfil.jfif" width="250" alt="">
             <div class="text-dark text-center mt-3">
               Ruy Luiz da Silva Machado Neto<br>
               23 anos<br>
