Correção redes sociais

--- a/index.html
+++ b/index.html
@@ -170,13 +170,13 @@
           <div class="iconifyicon">
             <a href="https://github.com/RuyMachado">
               <iconify-icon icon="mdi:github" style="color: black;" width="50px"></iconify-icon><br>
-              RuyMachado2
+              RuyMachado
             </a>
           </div>
           <div class="iconifyicon">
-            <a href="#">
+            <a href="https://www.linkedin.com/in/ruy-machado">
               <iconify-icon icon="mdi:linkedin" style="color: black;" width="50px"></iconify-icon><br>
-              CRIAR AINDA
+              ruy-machado
             </a> 
           </div>
           <div class="iconifyicon">
