--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
                   <a class="nav-link" href="#home">Home</a>
                 </li>
                 <li>
-                  <a class="nav-link" href="#">Sobre</a>
+                  <a class="nav-link" href="#curriculo">Currículo</a>
                 </li>
                 <li>
-                  <a class="nav-link" href="#curriculo">Currículo</a>
+                  <a class="nav-link" href="#cursos">Cursos</a>
                 </li>
                 <li>
                   <a class="nav-link" href="#contato">Contato</a>
@@ -112,14 +112,13 @@
                   <div class="js"></div>
                 </div>
               </li>
-              <div id="curriculo" ></div>
             </div>
           </div>
         </div>
       </div>
 
-
-      <div class="curriculo">
+      <div id="curriculo" ></div>
+      <div class="layout">
         <span class="d-flex justify-content-center">
           Currículo
         </span>
@@ -128,7 +127,7 @@
           <h3>Profissional</h3>
         </div>
         <div class="d-flex justify-content-around">
-          <div class="box">
+          <div class="boxcurriculo">
             <ul>
               <li>
                 <h5>Engenharia da Computação (UFES)</h5>
@@ -144,7 +143,7 @@
               </li>
             </ul>
           </div>
-          <div class="box">
+          <div class="boxcurriculo">
             <ul>
               <li>
                 <h5>Relevium - Centro de Controle da Dor | @releviumccd</h5>
@@ -154,7 +153,46 @@
               <li>
                 <h5>Ditos Lanches LTDA | @ditoslanches</h5>
                 Garçom, Balconista, Condimentador, Copeiro, Limpeza, Transporte<br>
-                dezembro 2022 - dezembro 2023
+                dezembro 2022 - fevereiro 2024
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div  id="cursos"></div>
+      <div class="layout">
+        <span class="d-flex justify-content-center">
+          Cursos
+        </span>
+        <div class="cursos">
+          <div class="boxcursos d-flex justify-between">
+            <ul>
+              <li>
+                <h5>Curso Imersão Front-End Alura</h5>
+                <br><br><br>
+              </li>
+              <li>
+                <h5>Curso NLW Expert trilha de React</h5>
+                <br><br><br>
+              </li>
+              <li>
+                <h5>Curso Nivelamento Hackers do Bem</h5>
+                <br><br><br>
+              </li>
+              <li>
+                <h5>Curso Básico Hackers do Bem(Em andamento)</h5>
+                <br><br><br>
+              </li>
+            </ul>
+            <ul>
+              <li>
+                <h5>Curso Udemy Python para Hackers(Em andamento)</h5>
+                <br><br><br>
+              </li>
+              <li>
+                <h5>Curso Udemy Fundamentos de Ethical Hacking(Em andamento)</h5>
+                <br><br><br>
               </li>
             </ul>
           </div>
